--- a/src/components/catalog/ToolGrid.astro
+++ b/src/components/catalog/ToolGrid.astro
@@ -25,6 +25,10 @@ const { tools, columns = 'M' } = Astro.props;
         tags={tool.tags}
         isNsfw={tool.isNsfw}
         telegramBotLink={tool.telegramBotLink}
+        acceptsRussianCards={tool.acceptsRussianCards}
+        requiresVpn={tool.requiresVpn}
+        supportsRussian={tool.supportsRussian}
+        paymentMethods={tool.paymentMethods}
       />
     </SequenceItem>
   ))}
