--- a/src/components/catalog/RelatedTools.astro
+++ b/src/components/catalog/RelatedTools.astro
@@ -31,6 +31,10 @@ const relatedTools = findRelatedTools(currentTool, allTools, limit);
             tags={tool.tags}
             isNsfw={tool.isNsfw}
             telegramBotLink={tool.telegramBotLink}
+            acceptsRussianCards={tool.acceptsRussianCards}
+            requiresVpn={tool.requiresVpn}
+            supportsRussian={tool.supportsRussian}
+            paymentMethods={tool.paymentMethods}
           />
         </SequenceItem>
       ))}
