--- a/src/components/catalog/ToolGrid.astro
+++ b/src/components/catalog/ToolGrid.astro
@@ -24,11 +24,7 @@ const { tools, columns = 'M' } = Astro.props;
         priceModel={tool.priceModel}
         tags={tool.tags}
         isNsfw={tool.isNsfw}
-        telegramBotLink={tool.telegramBotLink}
-        acceptsRussianCards={tool.acceptsRussianCards}
-        requiresVpn={tool.requiresVpn}
-        supportsRussian={tool.supportsRussian}
-        paymentMethods={tool.paymentMethods}
+        affiliateLink={tool.affiliateLink}
       />
     </SequenceItem>
   ))}
