--- a/src/pages/catalog/index.astro
+++ b/src/pages/catalog/index.astro
@@ -90,7 +90,7 @@ const telegramBots = sortedTools.filter(t => t.tags.includes('telegram-bot')).sl
   {telegramBots.length > 0 && (
     <>
       <Space size="L" />
-      <Rounded radius="1em">
+      <Rounded>
         <aside>
           <Sequence size="XL" gap="S">
             <SequenceItem>
