--- a/src/components/blog/BlogCard.astro
+++ b/src/components/blog/BlogCard.astro
@@ -29,7 +29,7 @@ const excerpt = description.length > 150
 <article class="blog-card">
   <a href={`/blog/${post.slug}`} class="blog-card__link">
     {coverImage && (
-      <Rounded radius="1em" class="blog-card__image-wrapper">
+      <Rounded class="blog-card__image-wrapper">
         <img
           src={coverImage}
           alt={title}
@@ -67,7 +67,6 @@ const excerpt = description.length > 150
 
   .blog-card__image-wrapper {
     position: relative;
-    aspect-ratio: 16 / 9;
     overflow: hidden;
     background: rgb(var(--ids__surface-RGB));
     margin-bottom: 0.75em;
@@ -77,11 +76,6 @@ const excerpt = description.length > 150
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: transform 0.3s ease;
-  }
-
-  .blog-card:hover .blog-card__image {
-    transform: scale(1.05);
   }
 
   .blog-card__content {
